Issue # 2344 OpenCV Manager doesn't tell which pack is used fixed.